--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://example.com/"  # End your URL with a `/` trailing slash.
+baseurl = "https://hemonth.github.io/portfolio/"  # End your URL with a `/` trailing slash.
 publishDir = "docs"
 title = "Academic"
 copyright = "&copy; 2016 Your Name"
