--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,8 @@ enableEmoji = true
 footnotereturnlinkcontents = "<sup>^</sup>"
 
 # Enable comments by entering your Disqus shortname
-disqusShortname = ""
+# https://https-hemonth-github-io-portfolio.disqus.com/admin/settings/general/
+disqusShortname = "https-hemonth-github-io-portfolio"
 
 # Enable analytics by entering your Google Analytics tracking ID
 googleAnalytics = ""
