--- a/config.toml
+++ b/config.toml
@@ -133,7 +133,7 @@ defaultContentLanguageInSubdir = false
   [[params.social]]
     icon = "twitter"
     icon_pack = "fa"
-    link = "//twitter.com/hemonth"
+    link = "//twitter.com/hemonthmandava"
 
   [[params.social]]
     icon = "github"
@@ -152,8 +152,8 @@ defaultContentLanguageInSubdir = false
   weight = 1
 
 [[menu.main]]
-  name = "Publications"
-  url = "#publications_selected"
+  name = "Skills"
+  url = "#skills"
   weight = 2
 
 [[menu.main]]
@@ -167,8 +167,8 @@ defaultContentLanguageInSubdir = false
   weight = 4
 
 [[menu.main]]
-  name = "Teaching"
-  url = "#teaching"
+  name = "Certifications"
+  url = "#certifications"
   weight = 5
 
 [[menu.main]]
